--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin-recipes</h1>
-    <a href="recipes/lasagna.html">lasagna</a>
-    <a href="recipes/lasagna.html">lasagna</a>
-    <a href="recipes/lasagna.html">lasagna</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/metalof.html">Metalof</a></li>
+    
+    </ul>
 </body>
 </html>
