--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin-recipes</h1>
+    <img src="https://freesvg.org/img/CHEF_COOKIG.png">
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/metalof.html">Metalof</a></li>
