Correct metalof to meatloaf

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="https://freesvg.org/img/CHEF_COOKIG.png">
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/metalof.html">Metalof</a></li>
+    <li><a href="recipes/metalof.html">Meatloaf</a></li>
     
     </ul>
 </body>
