--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-recipes</title>
+    <link rel="stylesheet" href="recipes.css"
 </head>
 <body>
-    <h1>Odin-recipes</h1>
+    <h1 id="odin">Odin-recipes</h1>
     <img src="https://freesvg.org/img/CHEF_COOKIG.png">
     <ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/metalof.html">Meatloaf</a></li>
+    <li class="lasagna"><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li class="metalof"><a href="recipes/metalof.html">Meatloaf</a></li>
     
     </ul>
 </body>
